# Kinora

./: .gitignore  AGENTS.md  Kinora - funkcionalnosti.docx  Kinora arhitektura.docx  LIFECYCLE.md  README.md  vercel.json
server/: .vercelignore  BACKEND_AGENT_RULES.md  README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  branding.py  main.py
server/app/api/: html_pages.py  router.py
server/app/core/: config.py
server/app/db/: __init__.py  session.py
server/app/middleware/: db_retry.py
server/app/models/: __init__.py  admission.py  auth_user.py  campaign.py  cinema.py  email_outbox.py  geography.py  movie.py  movie_recommendation.py  payment.py  private_booking.py  profile.py  screening.py  two_factor.py
server/app/notifications/: __init__.py  attachments.py  dispatcher.py  repository.py  runner.py  schemas.py  service.py  templates.py  types.py
server/app/schemas/: __init__.py  analytics.py  auth.py  campaign.py  cinema.py  loyalty.py  ml.py  movie.py  movie_recommendation.py  payment.py  screening.py  (+2 more)
server/kinora_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: test_admissions_pdf.py  test_auth_routes.py  test_campaign_service.py  test_cinema_management_routes.py  test_dashboard_admin_action_routes.py  test_domain_routes.py  test_health.py  test_movie_recommendation_admin_routes.py  test_movie_recommendation_notification.py  test_movie_recommendation_routes.py  test_notification_service.py  test_outbox_dispatcher.py  test_payments.py  test_private_bookings.py  test_share_previews.py  test_validator_service.py
(+191 files in other folders)
